# pyxiver

./: README.md  pyproject.toml  requirements.txt  script.py  setup.py
pyxiver/: __init__.py  api.py  core_requests.py  models.py
tests/: test_request.py
